--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,36 @@
 <head>
     <title>Home Page</title>
     <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://use.typekit.net/szh3fro.css" rel="stylesheet">
 </head>
+<div class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+</div>
+<style>
+.topnav {
+  background-color: #2b5797;
+  overflow: hidden;
+}
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 20px;
+}
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+.topnav a.active {
+  background-color: #5bbad5;
+  color: white;
+}
+</style>
 <body>
     <!-- display a flash message here, if necessary -->
     {% with messages = get_flashed_messages(with_categories=true) %}
