--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
     <title>Home Page</title>
     <!-- Bootstrap CSS -->
     <link href="https://use.typekit.net/szh3fro.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <div class="topnav">
     <a class="active" href="#home">Home</a>
@@ -32,30 +33,31 @@
   background-color: #5bbad5;
   color: white;
 }
+.thead {
+    background-color: #2b5797;
+    color: white;
+}
 </style>
 <body>
-    <!-- display a flash message here, if necessary -->
-    {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">
-                    {{ message }}
-                </div>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
+    <h1 class="my-header">Welcome to Drake University's Schedule Maker</h1>
     <div class="container">
-        <h1 class="mt-5">User Management System</h1>
-        <div class="mt-3">
-            <!-- Add User Button -->
-            <a href="/add-user" class="btn btn-primary">Add User</a>
-            <!-- Delete User Button -->
-            <a href="/delete-user" class="btn btn-danger">Delete User</a>
-            <!-- Update User Button -->
-            <a href="/update-user" class="btn btn-secondary">Update User</a>
-            <!-- Display All Users Button -->
-            <a href="/display-users" class="btn btn-info">Display All Users</a>
-        </div>
+        <h3>Here is your recommended schedule:</h3>
+        <table class="table table-bordered table-striped mt-3">
+            <thead class="thead">
+                <tr>
+                    <th>Semester</th>
+                    <th>Classes</th>
+                </tr>
+            </thead>
+            <tbody>
+                {%for semester in schedule %}
+                    <tr>
+                        <td>{{ semester }}</td>
+                        <td>{{ schedule[semester] | join(', ') }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 </body>
 </html>
