edit so all links work

--- a/templates/home.html
+++ b/templates/home.html
@@ -37,11 +37,17 @@
     background-color: #2b5797;
     color: white;
 }
+.my-header {
+    color: #5bbad5;
+}
+.sub-heading {
+    color: #2b5797
+}
 </style>
 <body>
     <h1 class="my-header">Welcome to Drake University's Schedule Maker</h1>
     <div class="container">
-        <h3>Here is your recommended schedule:</h3>
+        <h3 class="sub-heading">Here is your recommended schedule:</h3>
         <table class="table table-bordered table-striped mt-3">
             <thead class="thead">
                 <tr>
